--- a/ui/package.json
+++ b/ui/package.json
@@ -112,6 +112,7 @@
   "resolutions": {
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "word-wrap" : "npm:@aashutoshrathi/word-wrap"
   }
 }
