--- a/ui/package.json
+++ b/ui/package.json
@@ -116,6 +116,7 @@
   "resolutions": {
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
     "semver": "^7.5.2"
   }
 }
