--- a/ui/package.json
+++ b/ui/package.json
@@ -112,6 +112,7 @@
   "resolutions": {
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "axios": "^1.6.0",
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
