[risk=low][no ticket] Update UI packages to resolve vulnerabilities (#8109)
* force axios resolution to ^1.6.0 to resolve vulnerability
* fix: upgrade oidc-client-ts from 2.2.1 to 2.3.0
* fix: upgrade @types/lodash from 4.14.191 to 4.14.199

See this project in Snyk:
https://app.snyk.io/org/srushtigangireddy/project/fc523b3f-d450-4f71-972a-b0e6194899ac?utm_source=github&utm_medium=referral&page=upgrade-pr
---------
Co-authored-by: snyk-bot <snyk-bot@snyk.io>

--- a/ui/package.json
+++ b/ui/package.json
@@ -38,7 +38,7 @@
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.5.1",
     "@types/js-cookie": "^2.2.2",
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^10.12.11",
     "@types/react": "^17",
     "@types/react-dom": "^17",
@@ -55,7 +55,7 @@
     "moment": "^2.29.4",
     "nouislider": "^14.1.1",
     "nouislider-react": "^3.3.7",
-    "oidc-client-ts": "^2.2.0",
+    "oidc-client-ts": "^2.3.0",
     "outdated-browser-rework": "^2.8.0",
     "portable-fetch": "^3.0.0",
     "primeicons": "^5.0.0",
@@ -112,6 +112,7 @@
   "resolutions": {
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "axios": "^1.6.0",
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
